Refactor dimensions to use resource strings

--- a/app/src/main/res/layout/card_autocomplete_result.xml
+++ b/app/src/main/res/layout/card_autocomplete_result.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:contentPadding="16dp">
+    app:contentPadding="@dimen/space_medium_16dp">
 
     <TextView
         android:id="@+id/resultText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textSize="18sp" />
+        android:textSize="16sp" />
 
 </com.google.android.material.card.MaterialCardView>
