--- a/app/src/main/res/layout/card_work_blurb.xml
+++ b/app/src/main/res/layout/card_work_blurb.xml
@@ -21,14 +21,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
-            android:fontFamily="sans-serif-condensed"
             android:text="Error retrieving work"
-            android:textSize="24sp"
             app:layout_constrainedWidth="true"
             app:layout_constraintEnd_toStartOf="@+id/workDateUpdated"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            style="@style/heading_text" />
 
         <TextView
             android:id="@+id/workDateUpdated"
@@ -39,7 +38,8 @@
             android:drawableStart="@drawable/ic_card_date_updated_16"
             android:drawablePadding="4dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/workTitle" />
+            app:layout_constraintTop_toTopOf="@+id/workTitle"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workAuthors"
@@ -48,7 +48,8 @@
             android:layout_marginTop="@dimen/space_small_8dp"
             android:text="There was an error retrieving this work from AO3."
             app:layout_constraintStart_toStartOf="@+id/workTitle"
-            app:layout_constraintTop_toBottomOf="@+id/workTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/workTitle"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workLanguage"
@@ -59,7 +60,8 @@
             android:drawableStart="@drawable/ic_card_language_16"
             android:drawablePadding="@dimen/space_small_8dp"
             app:layout_constraintStart_toStartOf="@+id/workAuthors"
-            app:layout_constraintTop_toBottomOf="@+id/workAuthors" />
+            app:layout_constraintTop_toBottomOf="@+id/workAuthors"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workWarnings"
@@ -70,7 +72,8 @@
             android:drawablePadding="10sp"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/workLanguage"
-            app:layout_constraintTop_toBottomOf="@+id/workLanguage" />
+            app:layout_constraintTop_toBottomOf="@+id/workLanguage"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workRelationships"
@@ -80,7 +83,8 @@
             android:drawableLeft="@drawable/ic_card_relationships_14"
             android:drawablePadding="10sp"
             app:layout_constraintStart_toStartOf="@+id/workWarnings"
-            app:layout_constraintTop_toBottomOf="@+id/workWarnings" />
+            app:layout_constraintTop_toBottomOf="@+id/workWarnings"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workCharacters"
@@ -90,7 +94,8 @@
             android:drawableLeft="@drawable/ic_card_characters_24"
             android:drawablePadding="10sp"
             app:layout_constraintStart_toStartOf="@+id/workRelationships"
-            app:layout_constraintTop_toBottomOf="@+id/workRelationships" />
+            app:layout_constraintTop_toBottomOf="@+id/workRelationships"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workFreeforms"
@@ -100,7 +105,8 @@
             android:drawableLeft="@drawable/ic_card_freeforms_14"
             android:drawablePadding="10sp"
             app:layout_constraintStart_toStartOf="@+id/workCharacters"
-            app:layout_constraintTop_toBottomOf="@+id/workCharacters" />
+            app:layout_constraintTop_toBottomOf="@+id/workCharacters"
+            style="@style/body_text" />
 
         <TextView
             android:id="@+id/workSummary"
@@ -109,7 +115,8 @@
             android:layout_marginTop="@dimen/space_medium_16dp"
             android:text="A possible cause of this error is a bad internet connection. Please check your connection and try again."
             app:layout_constraintStart_toStartOf="@+id/workFreeforms"
-            app:layout_constraintTop_toBottomOf="@+id/workFreeforms" />
+            app:layout_constraintTop_toBottomOf="@+id/workFreeforms"
+            style="@style/body_text" />
 
         <TableLayout
             android:layout_width="match_parent"
@@ -130,7 +137,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableStart="@drawable/ic_card_word_count_16"
-                    android:drawablePadding="6dp" />
+                    android:drawablePadding="6dp"
+                    style="@style/body_text" />
 
                 <TextView
                     android:id="@+id/workChapters"
@@ -138,7 +146,8 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableStart="@drawable/ic_card_chapters_16"
-                    android:drawablePadding="6dp" />
+                    android:drawablePadding="6dp"
+                    style="@style/body_text" />
 
                 <TextView
                     android:id="@+id/workKudos"
@@ -146,28 +155,32 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableStart="@drawable/ic_card_kudos_16"
-                    android:drawablePadding="6dp" />
+                    android:drawablePadding="6dp"
+                    style="@style/body_text" />
 
                 <TextView
                     android:id="@+id/workComments"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_card_comments_16"
-                    android:drawablePadding="6dp" />
+                    android:drawablePadding="6dp"
+                    style="@style/body_text" />
 
                 <TextView
                     android:id="@+id/workBookmarks"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_card_bookmarks_16"
-                    android:drawablePadding="6dp" />
+                    android:drawablePadding="6dp"
+                    style="@style/body_text" />
 
                 <TextView
                     android:id="@+id/workHits"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableStart="@drawable/ic_card_hits_16"
-                    android:drawablePadding="6dp" />
+                    android:drawablePadding="6dp"
+                    style="@style/body_text" />
 
             </TableRow>
 
