--- a/app/src/main/res/layout/fragment_work_reader.xml
+++ b/app/src/main/res/layout/fragment_work_reader.xml
@@ -17,14 +17,15 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="@dimen/space_large_24dp"
-            android:scrollbarStyle="outsideInset" />
+            android:scrollbarStyle="outsideInset"
+            style="@style/body_text"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="@dimen/space_medium_16dp">
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/previousChapterButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -33,8 +34,9 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/currentChapterIndicator"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0/0"
@@ -44,7 +46,7 @@
                 app:layout_constraintStart_toEndOf="@+id/previousChapterButton"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/nextChapterButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
