--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,24 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="HeaderText">
+    <style name="heading_text">
+        <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:textSize">24sp</item>
         <item name="android:textColor">#454545</item>
     </style>
 
-    <style name="SectionHeaderText">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#454545</item>
-    </style>
-
-    <style name="UserInterfaceText">
-        <item name="android:textSize">24sp</item>
-        <item name="android:textColor">#454545</item>
-        <!--Consider Open Sans/Fira Sans as sans-serif body text-->
-    </style>
-
-    <style name="BodyText">
+    <style name="body_text">
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">#454545</item>
-        <!--Consider Open Sans/Fira Sans as sans-serif body text-->
+    </style>
+
+    <style name="autocomplete_text">
+        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
