--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="heading_text">
-        <item name="android:fontFamily">sans-serif-condensed</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">@font/sans_serif_medium</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textColor">#454545</item>
     </style>
 
     <style name="body_text">
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">14sp</item>
+        <item name="android:fontFamily">@font/sans_serif</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#454545</item>
+    </style>
+
+    <style name="reader_text">
+        <item name="android:fontFamily">@font/serif</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:textColor">#454545</item>
     </style>
 
     <style name="autocomplete_text">
-        <item name="android:fontFamily">sans-serif-light</item>
+        <item name="android:fontFamily">@font/sans_serif</item>
         <item name="android:textSize">16sp</item>
     </style>
 </resources>
